# mdedit

./: .gitignore  @AutomationLog.txt  CLAUDE.md  Cargo.toml  README.md  THEME_PLAN.md  build.rs  qterm_大纲设计规范.md  whaleterm_主题.md  whaleterm_云笔记.md  whaleterm_笔记界面.md  程序位置.md
.cargo/: config.toml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md  项目概述.md
.qoder/repowiki/zh/content/API 参考文档/: API 参考文档.md  Document 模块 API.md  Editor 模块 API.md  Outline 模块 API.md  Renderer 模块 API.md  Theme 模块 API.md
.qoder/repowiki/zh/content/API 参考文档/Theme 模块 API/: CSS 主题加载器.md  Theme 模块 API.md
.qoder/repowiki/zh/content/功能特性详解/: WYSIWYG 编辑模式.md  功能特性详解.md  大纲导航系统.md  工具栏系统.md  快捷键和键盘交互.md  文件操作功能.md  文件树组件.md  综合搜索系统.md  自动保存系统.md
.qoder/repowiki/zh/content/功能特性详解/Markdown 渲染引擎/: Markdown 渲染引擎.md  块级元素渲染.md  行内格式渲染.md
.qoder/repowiki/zh/content/功能特性详解/文档管理系统/: Buffer 缓冲系统.md  Document 文档模型.md  History 历史系统.md  文档管理系统.md
.qoder/repowiki/zh/content/开发指南/: 代码规范与风格.md  开发指南.md  开发环境配置.md  构建与部署.md  测试策略与实践.md  调试与故障排除.md  贡献指南.md
.qoder/repowiki/zh/content/核心架构设计/: 即时模式 GUI 架构.md  数据流与控制流.md  核心架构设计.md  模块化架构设计.md  配置管理系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: design.md  requirements.md  test-cases.md
docs/superpowers/plans/: 2026-05-28-cli-open-file.md
docs/superpowers/specs/: 2026-05-28-cli-open-file-design.md
src/: app.rs  auto_save.rs  config.rs  css_loader.rs  file_tree.rs  main.rs  search.rs  theme.rs  toolbar.rs
src/document/: buffer.rs  history.rs  mod.rs
src/editor/: mod.rs
src/outline/: mod.rs
src/renderer/: blocks.rs  inline.rs  mod.rs
(+5 files in other folders)
