[package]
name = "mdedit"
version = "0.1.0"
edition = "2021"
description = "A lightweight cross-platform Markdown editor with WYSIWYG rendering"
license = "MIT"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.29"
pulldown-cmark = "0.12"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
rfd = "0.15"
serde_json = "1"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
